{{$NEXT}}

0.000130  2020-05-30 11:11:54-07:00 America/Los_Angeles

    - Many documentation fixes

0.000129  2020-01-31 08:33:46-08:00 America/Los_Angeles

    - José Joaquín Atria Improve error handling of mock->override with AUTOLOADed methods

0.000128  2020-01-30 08:45:43-08:00 America/Los_Angeles

    - Nicolas R Import option to skip utf8 import
    - Victoria Mihell-Hale Correct POD for Test2/Tools/Mock.pm's mocked() method
    - Victoria Mihell-Hale Fix miscellaneous typos in Test2(/Tools)/Mock.pm POD
    - Nicolas R Add GitHub actions
    - Daniel Mita Fix PKG case for Test2::Tools::Target docs
    - Daniel Mita Document target change in V0 and Bundle::Extended
    - Daniel Mita Allow hashref to be used for Test2::Tools::Target

0.000127  2019-10-30 21:25:29-07:00 America/Los_Angeles

    - Fix srand toggling

0.000126  2019-08-28 12:44:59-07:00 America/Los_Angeles

    - Mention HUGE caveat in Test2::Plugin::Times
    - Make Test2::Util::Times::render_duration support 1 arg form

0.000125  2019-08-19 10:40:20-07:00 America/Los_Angeles

    - Add harness_job_fields to Times plugin

0.000124  2019-08-16 14:54:25-07:00 America/Los_Angeles

    - Make Times plugin use INFO facets for display

0.000123  2019-08-16 13:21:29-07:00 America/Los_Angeles

    - Fix double-load bug on Plugin::Times

0.000122  2019-05-18 08:21:20-07:00 America/Los_Angeles

    - Fix diag issues with ClassicCompare

0.000121  2019-05-07 12:00:27-07:00 America/Los_Angeles

    - Tracking for mocked methods
    - Include raw table in facet data when compare fails

0.000120  2019-04-26 05:19:18-07:00 America/Los_Angeles

    - Allow all_items inside bag

0.000119  2019-03-16 15:17:33-07:00 America/Los_Angeles

    - Allow meta-checks in bag/array/hash (Thanks jjatria)

0.000118  2019-01-18 13:44:06-08:00 America/Los_Angeles

    - Fix typo Test::Workflow -> Test2::Workflow #170
    - Fix test broken by new Test-Simple #175

0.000117  2018-12-04 11:37:15-08:00 America/Los_Angeles
