@@ -27,7 +27,7 @@ repository.type = git
 
 [Prereqs]
 perl          = 5.008001
-Test2::API    = 1.302158
+Test2::API    = 1.302175
 Importer      = 0.024
 Term::Table   = 0.013
 Sub::Info     = 0.002
